--- a/tfl-service/src/main/resources/assets/index.html
+++ b/tfl-service/src/main/resources/assets/index.html
@@ -22,6 +22,7 @@
 		<script src="js/script.js"></script>
 		<script src="js/paths.js"></script>
 		<script src="js/stations.js"></script>
+		<script src="js/tubeMapMaker.js"></script>
     </head>
     <body>
     <div id="mask">
