--- a/tfl-service/src/main/resources/assets/test.html
+++ b/tfl-service/src/main/resources/assets/test.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <script src="lib/jquery/jquery-2.0.3.min.js"></script>
+        <script src="lib/underscore-min.js"></script>
         <script src="js/test.js"></script>
         <style type="text/css">
             path {
