--- a/tfl-service/src/main/resources/assets/test.html
+++ b/tfl-service/src/main/resources/assets/test.html
@@ -12,7 +12,8 @@
 
             pre {
                 width: 100%;
-                height: 400px;
+                min-height: 400px;
+                padding: 10px;
                 border: 1px solid black;
             }
         </style>
