Adding jquery svg dependency

--- a/tfl-service/src/main/resources/assets/index.html
+++ b/tfl-service/src/main/resources/assets/index.html
@@ -9,6 +9,8 @@
 
         <!-- jquery -->
         <script src="lib/jquery/jquery-2.0.3.min.js"></script>
+        <link rel="stylesheet" href="lib/jquery/svg/jquery.svg.css" />
+        <script src="lib/jquery/svg/jquery.svg.min.js"></script>
 		
 		<!-- underscore -->
 		<script src="lib/underscore-min.js"></script>
