--- a/tfl-service/src/main/resources/assets/index.html
+++ b/tfl-service/src/main/resources/assets/index.html
@@ -8,8 +8,10 @@
         <link rel="stylesheet" href="lib/normalize.css" />
 
         <!-- jquery -->
+		<style type="text/css">@import "jquery.svg.css";</style> 
         <script src="lib/jquery/jquery-2.0.3.min.js"></script>
-		
+		<script type="text/javascript" src="jquery.svg.js"></script>
+
 		<!-- underscore -->
 		<script src="lib/underscore-min.js"></script>
 
