Splitting old map and new map in to their own files

--- a/tfl-service/src/main/resources/assets/index.html
+++ b/tfl-service/src/main/resources/assets/index.html
@@ -22,7 +22,8 @@
         <link rel="stylesheet" href="css/main.css" />
         
 		<script src="data/london_underground_station_names.js"></script>
-		<script src="js/script.js"></script>
+		<script src="js/map.js"></script>
+		<script src="js/oldmap.js"></script>
 		<script src="js/paths.js"></script>
 		<script src="js/stations.js"></script>
 		<script src="js/tubeMapMaker.js"></script>
