Removing unused jquery svg extensions, and making use of the dom one

--- a/tfl-service/src/main/resources/assets/index.html
+++ b/tfl-service/src/main/resources/assets/index.html
@@ -10,10 +10,11 @@
         <!-- jquery -->
         <script type="text/javascript" src="lib/jquery/jquery-2.0.3.min.js"></script>
 		<script type="text/javascript" src="lib/jquery/svg/jquery.svg.min.js"></script>
-		<style type="text/css" src="lib/jquery/svg/jquery.svg.css"></style> 
+		<script type="text/javascript" src="lib/jquery/svg/jquery.svgdom.min.js"></script>
+		<style type="text/css" src="lib/jquery/svg/jquery.svg.css"></style>
 
 		<!-- underscore -->
-		<script src="lib/underscore-min.js"></script>
+		<script src="lib/underscore/underscore-min.js"></script>
 
 		<!-- raphael -->
 		<script type="text/javascript" charset="utf-8" src="lib/raphael-min.js"></script>
