Updating how style is applied to lines, and changing jquery to 1.7.2 for compatability with jquery.svg

--- a/tfl-service/src/main/resources/assets/index.html
+++ b/tfl-service/src/main/resources/assets/index.html
@@ -8,10 +8,10 @@
         <link rel="stylesheet" href="lib/normalize.css" />
 
         <!-- jquery -->
-        <script type="text/javascript" src="lib/jquery/jquery-2.0.3.min.js"></script>
-		<script type="text/javascript" src="lib/jquery/svg/jquery.svg.min.js"></script>
+        <script type="text/javascript" src="lib/jquery/jquery-1.7.2.min.js"></script>
+		<script type="text/javascript" src="lib/jquery/svg/jquery.svg.js"></script>
 		<script type="text/javascript" src="lib/jquery/svg/jquery.svgdom.min.js"></script>
-		<style type="text/css" src="lib/jquery/svg/jquery.svg.css"></style>
+		<link rel="stylesheet" href="lib/jquery/svg/jquery.svg.css" />
 
 		<!-- underscore -->
 		<script src="lib/underscore/underscore-min.js"></script>
