--- a/tfl-service/src/main/resources/assets/index.html
+++ b/tfl-service/src/main/resources/assets/index.html
@@ -24,7 +24,7 @@
         
 		<script src="data/london_underground_station_names.js"></script>
 		<script src="js/tubeMapMaker.js"></script>
-		<script src="data/stations.js"></script>
+		<!--<script src="data/stations.js"></script>-->
 		<script src="js/oldmap.js"></script>
 		<script src="data/paths.js"></script>
 		<script src="js/map.js"></script>
