--- a/tfl-service/src/main/resources/assets/index.html
+++ b/tfl-service/src/main/resources/assets/index.html
@@ -10,26 +10,18 @@
         <!-- jquery -->
         <script type="text/javascript" src="lib/jquery/jquery-1.7.2.min.js"></script>
 		<script type="text/javascript" src="lib/jquery/svg/jquery.svg.js"></script>
-		<script type="text/javascript" src="lib/jquery/svg/jquery.svgdom.min.js"></script>
-		<link rel="stylesheet" href="lib/jquery/svg/jquery.svg.css" />
+		<script type="text/javascript" src="lib/jquery/svg/jquery.svgdom.js"></script>
 
 		<!-- underscore -->
 		<script src="lib/underscore/underscore-min.js"></script>
 
-		<!-- raphael -->
-		<script type="text/javascript" charset="utf-8" src="lib/raphael-min.js"></script>
-
         <link rel="icon" href="img/logo.png" />
         <link rel="stylesheet" href="css/main.css" />
         
-		<script src="data/london_underground_station_names.js"></script>
 		<script src="js/tubeMapMaker.js"></script>
-		<script src="data/stations.js"></script>
-		<script src="js/oldmap.js"></script>
 		<script src="js/map.js"></script>
     </head>
     <body>
     	<div id="map"></div>
-        <div id="mapold"></div>
     </body>
 </html>
