--- a/tfl-service/src/main/resources/assets/index.html
+++ b/tfl-service/src/main/resources/assets/index.html
@@ -17,11 +17,8 @@
 
         <link rel="icon" href="img/logo.png" />
         <link rel="stylesheet" href="css/main.css" />
-        
 		<script src="js/tubeMapMaker.js"></script>
 		<script src="js/map.js"></script>
     </head>
-    <body>
-    	<div id="map"></div>
-    </body>
+    <body id="map"></body>
 </html>
