Using connections.json to draw the map

--- a/tfl-service/src/main/resources/assets/index.html
+++ b/tfl-service/src/main/resources/assets/index.html
@@ -17,7 +17,7 @@
 
         <link rel="icon" href="img/logo.png" />
         <link rel="stylesheet" href="css/main.css" />
-		<script src="js/tubeMapMaker.js"></script>
+		<!--<script src="js/tubeMapMaker.js"></script>-->
 		<script src="js/map.js"></script>
     </head>
     <body id="map"></body>
